# Ros_V_Arm

./: README.md
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
logs/assignment/: build.check.074.log.stderr  build.make.001.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.022.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.027.log.stderr  build.make.031.log.stderr  build.make.036.log.stderr  build.make.044.log.stderr  build.make.049.log.stderr  build.make.055.log.stderr  build.make.059.log.stderr  build.make.060.log.stderr  build.make.061.log.stderr  build.make.063.log.stderr  build.make.064.log.stderr  build.make.066.log.stderr  build.make.068.log.stderr  build.make.069.log.stderr  build.make.070.log.stderr  build.make.072.log.stderr  build.make.073.log.stderr  build.make.077.log.stderr  build.make.080.log.stderr  build.make.081.log.stderr  (+17 more)
src/assignment/: .setup_assistant  CMakeLists.txt  README.md  assignment_plugin.xml  obstacle.scene
src/assignment/config/: assignment_planning.yaml  controllers.yaml  kinematics.yaml
src/assignment/launch/: assignment_planning_pipeline.launch.xml  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  panda_multiple_arms_moveit_planning_execution.launch  planner.launch  planning_context.launch  planning_pipeline.launch.xml  trajectory_execution.launch.xml
src/assignment/src/: assignment_context.cpp  assignment_context.h  assignment_plugin.cpp
(+62 files in other folders)
